# neo

./: .gitignore  CMakeLists.txt  README.md  notes.md
api/: CMakeLists.txt  build_linux.sh  build_mac.sh  build_windows.cmd  neo.c
api/include/: neo.h  neoarray.h  neobigfloat.h  neobigint.h  neoboolean.h  neodouble.h  neofunction.h  neoint.h  neoobject.h  neostring.h
api/tests/: test.c
api/types/: neoarray.c  neobigfloat.c  neobigint.c  neoboolean.c  neodouble.c  neofunction.c  neoint.c  neoobject.c  neostring.c
examples/: file.neo  syntax.neo
examples/statements/: classdefinition.neo  do.neo  expression.neo  functiondeclaration.neo  ifflow.neo  import.neo  loop.neo  variabledeclaration.neo
include/: compiler.hpp  error.h  error.hpp  lexer.h  lexer.hpp  parser.h  parser.hpp
src/: compiler.cpp  error.cpp  lexer.cpp  main.cpp  parser.cpp
tests/: parser.neo  token_test.neo
